<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">


    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#FFFFFF"
        android:textSize="36sp"
        android:padding="10dp"
        android:maxLength="32"
        android:gravity="right|bottom|center_vertical"
        />

    <!-- First Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:backgroundTint="#F44336"
            android:onClick="OnClear"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/button_openBracket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/openBracket"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            android:backgroundTint="#8A8A8C"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/button_closeBracket"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/closeBracket"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="onDigit"
            android:backgroundTint="#8A8A8C"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml" />
        <Button
            android:id="@+id/button_divide"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="onOperator"
            android:backgroundTint="#FFC107"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml"
           />


    </LinearLayout>
    <!-- Second Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_seven"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="7"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"
            android:backgroundTint="#00BCD4"/>

        <Button
            android:id="@+id/button_eight"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="8"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"
            android:backgroundTint="#00BCD4"/>
        <Button
            android:id="@+id/button_nine"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="9"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"
            android:backgroundTint="#00BCD4"/>

        <Button
            android:id="@+id/button_multiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/multiplication"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="onOperator"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            android:backgroundTint="#FFC107"/>


    </LinearLayout>
    <!-- Third Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_four"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="4"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_five"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="5"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_six"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="6"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_subtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="-"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="onOperator"
            android:backgroundTint="#FFC107"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>


    </LinearLayout>
    <!-- Fourth Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_one"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="1"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_two"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="2"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_three"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="3"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_addition"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/addition"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="onOperator"
            android:backgroundTint="#FFC107"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml"/>


    </LinearLayout>
    <!-- Fifth Row -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_Allclear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="AC"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_margin="5dp"
            android:onClick="OnAllClear"
            android:backgroundTint="#F44336"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="HardcodedText,NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_zero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDigit"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml"/>

        <Button
            android:id="@+id/button_decimal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/decimal"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="24sp"
            android:layout_margin="5dp"
            android:onClick="OnDecimal"
            android:backgroundTint="#00BCD4"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml"
            />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/equal_sign"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="5sp"
            android:onClick="onEqual"
            android:backgroundTint="#FFC107"
            style="?android:attr/buttonBarButtonStyle"
            tools:ignore="NestedWeights,UsingOnClickInXml"/>


    </LinearLayout>




</LinearLayout>